# only-send

./: README.md  package.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: email.rs  lib.rs  profile.rs  sent.rs  store.rs
src/lib/commom/: profile.ts  sent.ts  store.ts
src/lib/components/: app-sidebar.svelte  nav-user.svelte  settings-dialog.svelte
src/lib/components/editor/: editor.svelte
src/lib/components/setup/: api-key-prompt.svelte  index.ts  password-prompt.svelte
src/lib/components/ui/alert-dialog/: alert-dialog-action.svelte  alert-dialog-cancel.svelte  alert-dialog-content.svelte
src/lib/components/ui/field/: field-content.svelte
src/lib/components/ui/input-tag/: input-tag.svelte
src/lib/components/ui/toggle-group/: toggle-group-item.svelte  toggle-group.svelte
src/lib/schemas/: email-composer.schema.ts  setup.schema.ts
src/lib/stores/: email-cache.svelte.ts
src/lib/types/: attachment-payload.type.ts  index.ts  profile.type.ts  sent.type.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/mail/: +layout.svelte
src/routes/mail/composer/: +page.svelte
src/routes/mail/sent/: +page.svelte
src/routes/mail/sent/[id]/: +page.svelte
