[package]
name = "only-send"
version = "0.1.1"
description = "A clean and minimal email composer powered by Resend."
authors = ["Cristhian Melo @rxtsel"]
edition = "2021"
license = "GPL-2.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "only_send_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
resend-rs = "0.19.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
base64 = "0.22.1"
uuid = { version = "1.18.1", features = ["v4"] }
